--- a/QuestionService/src/main/resources/application.properties
+++ b/QuestionService/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=QuestionService
 
-server.port=8082
+server.port=8081
 
 #database
 spring.datasource.url=jdbc:mysql://localhost:3306/micro_db
@@ -11,3 +11,5 @@ spring.datasource.password=Nikhilttn@123
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+eureka.instance.client.serverUrl.defaultZone= http://localhost:8761/eureka/
