--- a/QuizService/src/main/resources/application.properties
+++ b/QuizService/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=QuizService
-server.port=8081
+server.port=8080
 
 #database
 spring.datasource.url=jdbc:mysql://localhost:3306/micro_db
@@ -10,3 +10,5 @@ spring.datasource.password=Nikhilttn@123
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+eureka.instance.client.serverUrl.defaultZone= http://localhost:8761/eureka/
